Logo em index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body>
         <header>
-            <h1>MBruno</h1>
+            <img src="assets/img/logo.png" alt="Avatar do Marco Bruno">
             
             <nav> <!-- navigation -->
                 <a href="" lang="en">Skills</a> <!-- anchor -->
