--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/components/tittle.css">
     </head>
 
     <body>
@@ -24,6 +25,8 @@
                 <a id="button" href="" lang="en">Download CV</a>
             </nav>
         </header>
+
+        <h1>Marco Bruno</h1> <!-- heading 1 -->
     </body>
-    
+
 </html>
