--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/components/tittle.css">
+        <link rel="stylesheet" href="css/components/subtittle.css">
     </head>
 
     <body>
@@ -27,6 +28,8 @@
         </header>
 
         <h1>Marco Bruno</h1> <!-- heading 1 -->
+        
+        <h2>FrontEnd Developer</h2>
     </body>
 
 </html>
