--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/components/tittle.css">
         <link rel="stylesheet" href="css/components/subtittle.css">
+        <link rel="stylesheet" href="css/components/box.css">
     </head>
 
     <body>
@@ -27,9 +28,10 @@
             </nav>
         </header>
 
-        <h1>Marco Bruno</h1> <!-- heading 1 -->
-        
-        <h2>FrontEnd Developer</h2>
+        <div id="box">
+            <h1>Marco Bruno</h1> <!-- heading 1 -->
+            <h2>FrontEnd Developer</h2>
+        </div>
     </body>
 
 </html>
