--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/components/box.css">
         <link rel="stylesheet" href="css/components/action.css">
         <link rel="stylesheet" href="css/components/header.css">
+        <link rel="stylesheet" href="css/components/banner.css">
     </head>
 
     <body>
@@ -30,14 +31,20 @@
             </nav>
         </header>
 
-        <div class="box">
-            <h1 class="title">Marco Bruno</h1> <!-- heading 1 -->
-            <h2 class="subtitle">FrontEnd Developer</h2>
-        </div>
+        <section class="banner">
+            <div class="wrapper">
+                <div class="box">
+                    <h1 class="title">Marco Bruno</h1> <!-- heading 1 -->
+                    <h2 class="subtitle">FrontEnd Developer</h2>
+                </div>
 
-        <a class="button" href="" lang="en">Download CV</a>
-        <a class="button" href="">Contatos</a>
-        <button class="button" href="">Coiso</button>
+                <div class="navigation">
+                    <a class="button" href="" lang="en">Download CV</a>
+                    <a class="button" href="">Contatos</a>
+                </div>
+            </div>
+        </section>
+
     </body>
 
 </html>
